translation invest transac projet et ajout des dependances reconnaissance faciale